dynamic sponge collector & more equality models